[package]
name = "aerodb"
version = "0.1.0"
edition = "2021"
description = "A strict, deterministic, self-hostable database"
license = "MIT"

[dependencies]
chrono = "0.4"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
