[package]
name = "aerodb"
version = "0.1.0"
edition = "2021"
description = "A strict, deterministic, self-hostable database"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tar = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Phase 8: Authentication
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
subtle = "2.5"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

